--- a/client/src/components/Landingpage/Landingpage.css
+++ b/client/src/components/Landingpage/Landingpage.css
@@ -1,98 +1,14 @@
-.container-landingpage {
+#landing-page {
     background-image: url("/image/abstract.jpg");
     background-position: center;
-    position: fixed;
+    background-repeat: no-repeat;
     width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
- 
-}
-
-.login {
-    font-family: Courier;
-    padding-left: 80%;
-}
-
-.login-button .logintext {
-    /* position:relative; */
-    bottom:30px;
-    left:0px;
-    visibility:hidden;
-}
-    
-.login-button:hover .logintext {
-        visibility: visible;
-        transition: .5s ease;
-        display: block;
-}
-
-.logintext{
-    background-image: url("/image/backroundHover.png");
-    /* background-color: white; */
-    width: 100%;
-    height: 250px;
-    padding: 10px;
-    font-size: 30px;
-    font-family: Courier;
-}
-
-.big-button {
-    padding-left: 400px;
-    
-}
-
-.btn-light {
-    font-family: Courier;
-    width: 750px;
-    height: 50px;
-    margin: 0 auto;
-    padding: 0;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-}
-
-.welcome {
-    font-family: Courier; 
-    color: white; 
-    font-size: 100px;
-    text-align: center;
-    /* margin-top: 200px; */
+    height: 100vh;
   
 }
 
-.subtitle {
-    font-family: Courier; 
-    color: white; 
-    font-size: 60px; 
-    text-align: center;
+#landing-page-text{
+    color: 'white';
+    text-align:"center" 
 }
 
-.big-button .text {
-    /* position:relative; */
-    bottom:30px;
-    left:0px;
-    visibility:hidden;
-    }
-    
-.big-button:hover .text {
-        visibility: visible;
-        transition: .5s ease;
-        display: block;
-}
-
-.text{
-    background-image: url("/image/backroundHover.png");
-    /* background-color: white; */
-    width: 75%;
-    height: 200px;
-    padding: 10px;
-    font-size: 30px;
-    font-family: Courier;
-}
-
-.purpose {
-    color: white;
-}
-  
