--- a/client/src/components/Landingpage/Landingpage.css
+++ b/client/src/components/Landingpage/Landingpage.css
@@ -6,7 +6,6 @@
     height: 100%;
     left: 0;
     top: 0;
- 
 }
 
 .login {
@@ -38,7 +37,7 @@
 }
 
 .big-button {
-    padding-left: 400px;
+    padding-left: 500px;
     
 }
 
@@ -66,6 +65,12 @@ h4 {
     font-family: Courier; 
     color: white; 
     font-size: 60px; 
+    text-align: center;
+}
+h5 {
+    font-family: Courier; 
+    color: white; 
+    font-size: 80px; 
     text-align: center;
 }
 
