--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -1,6 +1,16 @@
 @media all and (min-width: 480px) {
+  .container-signup {
+      background-image: url("/image/businessmen-3762561_1920.jpg");
+      background-position: center;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+  }
   .Signup {
-    padding: 60px 0;
+    padding: 0px 0;
+    
   }
 
   .Signup form {
@@ -10,7 +20,61 @@
 }
 
 .Signup form span.help-block {
-  font-size: 14px;
+  font-size: 20px;
   padding-bottom: 10px;
-  color: #999;
+  color: gray;
+}
+
+h1 {
+  color: white;
+  font-size: 30px
+}
+
+h2 {
+  color: white;
+  font-size: 35px;
+  /* padding-left: 680px; */
+}
+h6 {
+  color: white;
+  font-size: 25px;
+}
+.home-button {
+  line-height: 12px;
+  width: 250px;
+  font-size: 8pt;
+  font-family: tahoma;
+  position:absolute;
+  top:0;
+  right:0;
+  margin: 0px;
+}
+
+.home-button .hometext {
+  /* position:relative; */
+  bottom:30px;
+  left:0px;
+  visibility:hidden;
+}
+  
+.home-button:hover .hometext {
+      visibility: visible;
+      transition: .5s ease;
+      display: block;
+}
+
+.hometext{
+  /* background-image: url("/image/backroundHover.png"); */
+  background-color: black;
+  width: 100%;
+  height: 200px;
+  padding: 20px;
+  font-size: 30px;
+  font-family: Courier;
+}
+.btn-btn-light {
+  background-color: white;
+  font-family: Courier;
+  text: black;
+
 }
