--- a/client/src/components/Landingpage/Landingpage.css
+++ b/client/src/components/Landingpage/Landingpage.css
@@ -1,99 +1,48 @@
-#landing-page {
+.container-fluid {
     background-image: url("/image/abstract.jpg");
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-<<<<<<< HEAD
-    height: 100%;
-    left: 0;
-    top: 0;
+    min-height: 100vh;
+    position:fixed;
+    padding:0;
+    margin:0;
+    /* padding-bottom: 300px; */
 }
-
-.login {
-    font-family: Courier;
-    padding-left: 1400px;
-}
-
-.login-button .logintext {
-    /* position:relative; */
-    bottom:30px;
-    left:0px;
-    visibility:hidden;
-}
-    
-.login-button:hover .logintext {
-        visibility: visible;
-        transition: .5s ease;
-        display: block;
-}
-
-.logintext{
-    background-image: url("/image/backroundHover.png");
-    /* background-color: white; */
-    width: 100%;
-    height: 250px;
-    padding: 10px;
-    font-size: 30px;
-    font-family: Courier;
-}
-
-.big-button {
-    padding-left: 500px;
-    
-}
-
-.btn-light {
-    font-family: Courier;
-    width: 750px;
-    height: 50px;
-    margin: 0 auto;
-    padding: 0;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-}
-
-h1 {
-    font-family: Courier; 
-    color: white; 
-    font-size: 100px;
-    text-align: center;
-    /* margin-top: 200px; */
-  
-}
-
-h4 {
-    font-family: Courier; 
-    color: white; 
-    font-size: 60px; 
-    text-align: center;
-}
-h5 {
-    font-family: Courier; 
-    color: white; 
-    font-size: 80px; 
-    text-align: center;
-}
-
-.big-button .text {
-    /* position:relative; */
-    bottom:30px;
-    left:0px;
-    visibility:hidden;
-    }
-    
-.big-button:hover .text {
-        visibility: visible;
-        transition: .5s ease;
-        display: block;
-=======
-    height: 100vh;
-  
-}
-
-#landing-page-text{
+:local(#landing-page-text) {
     color: 'white';
     text-align:"center" 
->>>>>>> b3beda16f8ab825290ecfb9407e2ecf8149244bb
 }
 
+:local(.btn-secondary) {
+    color: black;
+    background-color: white;
+    border-color:white;
+    margin-bottom: 80px;
+    margin-top: 0px;
+}
+
+:local(h1) {
+    font-family: monospace;
+    color: aliceblue;
+    font-size: 70px;
+    padding-top: 160px;
+    /* padding-top: 260px; */
+    
+}
+:local(p) {
+    color: white;
+    text-align: center;
+    font-family: monospace;
+    font-size: 20px;
+}
+:local(a) {
+    /* color: grey; */
+    text-align: center;
+    font-family: monospace;
+}
+
+:local(#justified-content-center) {
+    /* padding-bottom: 380px; */
+    padding-top: 260px;
+}
