--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -1,45 +1,55 @@
 @media all and (min-width: 480px) {
   .container-signup {
-      background-image: url("/image/businessmen-3762561_1920.jpg");
-      background-position: center;
+      background-image: url("/image/430888.jpg");
+      /* background-position: center;
       position: fixed;
       width: 100%;
       height: 100%;
       left: 0;
-      top: 0;
+      top: 0; */
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover; 
+      background-size: 100% 100%;
+      min-height: 100vh;
   }
   .Signup {
     padding: 0px 0;
+    padding-right: 340px;
     
   }
-
+  
   .Signup form {
     margin: 0 auto;
-    max-width: 320px;
+    max-width: 200px;
   }
-}
-
-.Signup form span.help-block {
+  
+  .Signup form span.help-block {
   font-size: 20px;
   padding-bottom: 10px;
   color: gray;
-}
-
-h1 {
+  }
+  
+  /* h1 {
   color: white;
   font-size: 30px
-}
+  } */
 
-h2 {
-  color: white;
-  font-size: 35px;
-  /* padding-left: 680px; */
-}
-h6 {
+  :local(h2) {
+    color: white;
+    font-size: 30px;
+    font-family: monospace;
+    padding-top: 20px;
+    padding-left: 190px;
+  }
+
+  /* h6 {
   color: white;
   font-size: 25px;
-}
-.home-button {
+  } */
+
+  .home-button {
   line-height: 12px;
   width: 250px;
   font-size: 8pt;
@@ -48,22 +58,22 @@ h6 {
   top:0;
   right:0;
   margin: 0px;
-}
+  }
 
-.home-button .hometext {
+  .home-button .hometext {
   /* position:relative; */
   bottom:30px;
   left:0px;
   visibility:hidden;
-}
+  }
   
-.home-button:hover .hometext {
+  .home-button:hover .hometext {
       visibility: visible;
       transition: .5s ease;
       display: block;
-}
+  }
 
-.hometext{
+  .hometext{
   /* background-image: url("/image/backroundHover.png"); */
   background-color: black;
   width: 100%;
@@ -71,10 +81,10 @@ h6 {
   padding: 20px;
   font-size: 30px;
   font-family: Courier;
-}
-.btn-btn-light {
+  }
+
+  .btn-btn-light {
   background-color: white;
   font-family: Courier;
-  text: black;
-
+  }
 }
