--- a/client/src/components/Landingpage/Landingpage.css
+++ b/client/src/components/Landingpage/Landingpage.css
@@ -22,7 +22,7 @@
     font-family: monospace;
     color: aliceblue;
     font-size: 70px;
-    padding-top: 160px;
+    padding-top: 15%;
     /* padding-top: 260px; */
 }
 
@@ -42,6 +42,7 @@
 
 :local(button) {
     border-radius: 25px;
+    background-color: #28a745;
 }
 
 :local(#justified-content-center) {
